<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPrincipale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Connexion"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textVide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textAutoComplete" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextMdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>
    
    <TextView
        android:id="@+id/textVide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Connexion" />

    <requestFocus />

    <!-- TextView
        android:id="@+id/textVide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /-->

    <!-- TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ou"
        android:textSize="15sp" /-->
    
    <!-- TextView
        android:id="@+id/textVide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/-->
    
        <!--  Button
        android:id="@+id/buttonCreerFamille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreerFamille" /-->

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sinscrire" />
    
</LinearLayout>